Automatically create assets dir, and fix collapsed image display in CMS

--- a/src/backend/app/styles/admin.styl
+++ b/src/backend/app/styles/admin.styl
@@ -654,6 +654,7 @@ body
 					height $collapsedHeight
 					padding 0
 					.image
+						display inline-block
 						img
 							position absolute
 							top 0
